# zero_sum

./: .gitignore  Cargo.toml  README.md
examples/: tak_opening.rs  tic_tac_toe.rs
smallann/: Cargo.toml
smallann/examples/: sin_net.rs
smallann/smallmath/: Cargo.toml
smallann/smallmath/src/: lib.rs
smallann/smallmath/src/matrix/: mod.rs
smallann/smallmath/src/matrix/ops/: clone_region.rs  mod.rs  multiply.rs  transpose.rs
smallann/smallmath/src/vector/: mod.rs
smallann/smallmath/src/vector/ops/: add.rs  divide.rs  max.rs  mod.rs  multiply.rs  offset.rs  reciprocal.rs  scale.rs  signum.rs  sqrt.rs  square.rs  subtract.rs
smallann/src/: ann.rs  lib.rs  serialization.rs
smallann/src/activation_function/: mod.rs  relu.rs  tanh.rs
smallann/src/gradient_descent/: adadelta.rs  mod.rs  momentum.rs  simple.rs
smallann/src/layer/: activation.rs  composite.rs  convolutional.rs  fully_connected.rs  mod.rs  pass_through.rs  split.rs
smallann/src/loss_function/: mean_squared_error.rs  mod.rs
smallann/src/serialization/: file.rs  identifiable.rs  mod.rs
smallann/src/serialization/serializable/: matrix.rs  mod.rs  vector.rs
smallann/src/serialization/serializable/gradient_descent/: adadelta.rs  mod.rs  momentum.rs  simple.rs
smallann/src/serialization/serializable/layer/: activation.rs  composite.rs  convolutional.rs  fully_connected.rs  mod.rs  pass_through.rs  split.rs
src/: lib.rs  ply.rs  resolution.rs  state.rs
src/ai/: evaluation.rs  extrapolation.rs  mod.rs
src/ai/search/: mod.rs
src/ai/search/pvsearch/: mod.rs  ply_generator.rs
src/analysis/: evaluation.rs  evaluator.rs  extrapolation.rs  mod.rs
src/analysis/search/: mod.rs
src/analysis/search/mctsearch/: jkiss32.rs  mod.rs  volatile.rs  worker.rs
src/analysis/search/mctsearch/selector/: mod.rs  puct.rs
src/analysis/search/mctsearch/simulator/: mod.rs  random.rs
src/analysis/search/prob_pvsearch/: mod.rs  ply_generator.rs  statistics.rs  transposition_table.rs
src/analysis/search/prob_pvsearch/estimator/: mod.rs  naive.rs
src/analysis/search/pvsearch/: history.rs  mod.rs  ply_generator.rs  statistics.rs  transposition_table.rs
src/impls/: mod.rs
src/impls/tak/: mod.rs  ply.rs  resolution.rs
src/impls/tak/state/: evaluation.rs  extrapolation.rs  metadata.rs  mod.rs  state.rs
src/impls/tak/state/ann/: activation_function.rs  feature_representation.rs  gradient_descent.rs  matrix.rs  mod.rs  serialization.rs
src/impls/tak/state/evaluation/: mod.rs  static_.rs
src/impls/tak/state/evaluator/: ann.rs  mod.rs  static_.rs
src/impls/tic_tac_toe/: display.rs  mod.rs  zero_sum.rs
src/util/: jkiss32.rs  mod.rs
