[package]
name = "zero_sum"
version = "1.1.2"
authors = ["Chris Foster <cdbfoster@gmail.com>"]
license = "GPL-3.0"
description = "An analysis engine for zero-sum games with game implementations."
repository = "https://github.com/cdbfoster/zero_sum"
readme = "README.md"
documentation = "https://cdbfoster.github.io/doc/zero_sum"
keywords = ["zero-sum", "game", "chess", "tak", "tic-tac-toe"]

[features]
with_all = ["with_tak", "with_tic_tac_toe"]
with_tak = ["lazy_static", "rand"]
with_tak_ann = ["with_tak", "blas", "rusqlite"]
with_tic_tac_toe = []

[dependencies]
blas = { version = "0.15.3", optional = true }
fnv = "1.0"
lazy_static = { version = "0.2", optional = true }
rand = { version = "0.3", optional = true }
rusqlite = { version = "0.10", optional = true }
