[package]
name = "smallmath"
version = "0.1.0"
authors = ["Chris Foster <cdbfoster@gmail.com>"]

[features]
with_blas = ["cblas", "openblas-src"]
with_simd = ["simd"]

[dependencies]
cblas = { version = "0.1", optional = true }
openblas-src = { version = "0.5", optional = true }
simd = { version = "0.2", optional = true }
